# symlib

./: CMakeLists.txt
cmake/: helper.cmake  symlib.pc.cmake
src/: CMakeLists.txt  rational_mathematics.f90
